--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+Django==1.6.9
+Fabric==1.10.1
+Markdown==2.5.2
 Mezzanine==3.1.10
+Pillow==2.7.0
+Pygments==2.0.1
+South==1.0.2
+argparse==1.2.1
+beautifulsoup4==4.1.3
+bleach==1.4.1
+ecdsa==0.11
+filebrowser-safe==0.3.6
+future==0.9.0
+grappelli-safe==0.3.13
+html5lib==0.999
+mezzanine-pagedown==0.8
+oauthlib==0.7.2
+paramiko==1.15.2
+pycrypto==2.6.1
+pytz==2014.10
+requests==2.5.1
+requests-oauthlib==0.4.2
+six==1.9.0
+tzlocal==1.0
+wsgiref==0.1.2
