--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ South==1.0.2
 argparse==1.2.1
 beautifulsoup4==4.1.3
 bleach==1.4.1
+dropbox==2.2.0
 ecdsa==0.11
 filebrowser-safe==0.3.6
 future==0.9.0
@@ -22,4 +23,5 @@ requests==2.5.1
 requests-oauthlib==0.4.2
 six==1.9.0
 tzlocal==1.0
+urllib3==1.10
 wsgiref==0.1.2
